# shareflow-kvm

./: .gitignore  BUGS.md  README.md  check_crash.ps1  package-lock.json  package.json
.claude/: settings.local.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: sync.rs
src-tauri/src/core/: config.rs  engine.rs  hotkey.rs  mod.rs  protocol.rs  runtime.rs  screen.rs
src-tauri/src/file_transfer/: mod.rs  receiver.rs  sender.rs
src-tauri/src/input/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/network/: connection.rs  discovery.rs  mod.rs  server.rs  tls.rs
