[package]
name = "shareflow"
version = "1.34.0"
description = "Share keyboard and mouse between multiple PCs"
authors = ["you"]
edition = "2021"

[lib]
name = "shareflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
arboard = { version = "3", features = ["image-data"] }
base64 = "0.22"
local-ip-address = "0.6"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
